[package]
name = "s2n-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
futures = { version = "0.3.31", features = ["std"] }
s2n-quic = { version = "1.71.0", features = ["unstable-provider-datagram"]}
socket2 = "0.6.1"
tokio = { version = "1.48.0", features = ["full"] }
